--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 authors = [
     { name = "Nikos Ves", email = "nick.ves@glasgow.ac.uk" }
 ]
-requires-python = ">=3.13"
+requires-python = ">=3.9"
 dependencies = [
     "click>=8.1.8",
     "pandas>=2.2.3",
@@ -20,4 +20,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.ruff.lint]
+extend-select = [
+    "PD"
+    ]
 
